deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: login
spec:
  replicas: 1
  selector:
    matchLabels:
      app: login
  template:
    metadata:
      labels:
        app: login
    spec:
      nodeSelector:
        starget: worker  
      containers:
      - name: login-container
        image: quay.apps.ocp.komsco.co.kr/komsco/login:latest
        ports:
        - containerPort: 80
      imagePullSecrets:
        - name: quay-registry-secret
